--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "email": "nerd305@gmail.com"
     }],
     "require": {
-        "php": "^7.0"
+        "php": "^7.0 | ^8.0"
     },
     "autoload": {
         "psr-0": {
